--- a/react_fastapi_app/src/components/login/Login.css
+++ b/react_fastapi_app/src/components/login/Login.css
@@ -1,12 +1,12 @@
-.wid {
+.full-width {
     width: 100%;
 }
-.height2 {
-    margin-top: 14vh;
+.card-height {
+    margin-top: 8rem;
 }
-.height3 {
-    height: 12vh;
+.sub-row-height {
+    margin-top: .5rem;
 }
-.bottom3 {
-    height: 8vh;
+.bottom-margin {
+    margin-bottom: 2rem;
 }
